# blazyRS

./: Cargo.toml
src/: app.rs  discord.rs  main.rs
src/app_modules/: mod.rs  test.rs
src/commands/: member.rs  mod.rs  ping.rs
