[package]
name = "blazy"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serenity = "0.12"
poise = "0.6.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.4", features = [
  "runtime-tokio",
  "tls-native-tls",
  "macros",
  "migrate",
  "chrono",
  "postgres",
] }
